# GodotVideoConverter

./: FFmpeg legal notice.txt  GodotVideoConverter.sln  README.md  gvc.spec  pyproject.toml
GodotVideoConverter/: App.config  App.xaml  App.xaml.cs  Converter.cs  GodotVideoConverter.csproj  MainWindow.xaml  MainWindow.xaml.cs  StringToVisibilityConverter.cs
GodotVideoConverter/Models/: VideoInfo.cs
GodotVideoConverter/Properties/: Settings.Designer.cs  Settings.settings
GodotVideoConverter/Service/: VideoConversionService.cs  VideoRecommendationService.cs
GodotVideoConverter/ViewModels/: MainViewModel.Collections.cs  MainViewModel.Commands.cs  MainViewModel.Conversion.cs  MainViewModel.Core.cs  MainViewModel.Properties.cs  MainViewModel.Settings.cs  MainViewModel.cs
GodotVideoConverter/Views/: AboutWindow.xaml  AboutWindow.xaml.cs
scripts/: build_linux.sh  build_windows.ps1
src/gvc/: atlas.py  audio.py  batch.py  batch_jobs.py  convert.py  dialogs.py  experience.py  ffmpeg_paths.py  file_selection.py  gui.py  gui_experience.py  gui_operations.py  gui_selection.py  gui_state_controller.py  i18n.py  i18n_catalogs.py  media_probe.py  probe.py  process_utils.py  qt_worker.py  recommendation_catalogs.py  recommendations.py  runner.py  settings.py  ui_language.py  ui_panels.py  ui_state.py
