[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "godot-video-converter-py"
version = "1.0.7"
description = "Godot-focused video conversion and atlas generation utility built with Python and FFmpeg"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.8,<7",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.13,<7",
]

[project.scripts]
gvc-gui = "gvc.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
